cargo-features = ["strip"]
[package]
name = "partun"
version = "0.1.8"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
clap = "2.34.0"
rand = "0.8.4"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
