cargo-features = ["strip"]
[package]
name = "partun"
version = "0.1.11"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.13"
clap = "3.0.13"
rand = "0.8.4"
env_logger = "0.9.0"
log = "0.4.14"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
